[package]
name = "dtw_cost"
version = "0.1.0"
authors = ["pentamassiv <pentamassiv@posteo.de>"]
edition = "2021"

[features]
# The default set of optional packages
default = []
ndarrays = ["ndarray", "ndarray-stats", "num-traits"]


[dependencies]
ndarray= { version = "0.15", optional = true }
ndarray-stats = { version = "0.5", optional = true }
num-traits = { version = "0.2", optional = true }